<resources>
    <string name="app_name">BuyHome</string>
    <string name="add_to_car">立馬加入購物車!!!加入購物車!!!</string>
    <string name="slog">Buy Home</string>
    <string name="title_activity_product">MainActivity</string>
    <string name="title_home">首頁</string>
    <string name="title_dashboard">分類</string>
    <string name="title_cart">購物車</string>
    <string name="title_notification">專屬</string>
    <string name="title_user">我的</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--  8-9.  -->
    <!-- Payment notification -->
    <string name="channel_name">Payment Channel</string>
    <string name="send_notification">Send Notification</string>
    <string name="notification_title" translatable="false">Account top up</string>
    <string name="notification_text">Your account balance in close to zero. Top it up now.</string>
    <string name="pay_other_method">Top-up using a different method</string>

    <!-- Checkout -->
    <string name="googlepay_status_unavailable">Unfortunately, Google Pay is not available on this device.</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>
    <string name="gateway_replace_name_example">"Gateway name set to \"example\" - please modify Constants.java and replace it with your own gateway."</string>
    <string name="checkout_item_description">Description</string>
    <string name="title_activity_maps">Map</string>

</resources>