<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.buyhome_login.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.buyhome_login.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.buyhome_login.ui.notifications.NotificationsFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.buyhome_login.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/cart_fragment" >
        <action
            android:id="@+id/action_navigation_cart_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.buyhome_login.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/user_fragment" >
        <action
            android:id="@+id/action_navigation_user_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>